--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<!-- the entire body must be written by student -->
+	<p>My favorite color is <span class="favorite-color">
+		lightgreen</span></p>
     <script type="text/javascript" src="./script.js">
 </script>
 
